# RusticSDR

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: baseband_sink.rs  freq_chart.rs  main.rs  sdr.rs  sdr_device.rs  tail_sink.rs  utills.rs  waterfall.rs
