[package]
name = "rusticSDR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
iced = {version = "0.12.1", features = ["async-std", "canvas", "image"]}
iced_aw = { version = "0.9.3", default-features = false, features = ["menu", "quad"] }
plotters-iced = "0.10.0"
plotters="0.3"
hound = "3.5.1"
chrono = "0.4.35"
futuresdr = { git = "https://github.com/FutureSDR/FutureSDR", rev = "f8fba06", features=["soapy", "rtlsdr"] }
colorgrad = "0.6.2"